# Packet_Peeper

./: .gitignore  ARCHITECTURE.md  BACKEND_ANALYSIS_REPORT.md  BACKEND_READY.md  BACKEND_STARTUP_GUIDE.md  DEVELOPMENT_HISTORY.md  Deep Analysis Of Repository.md  ENTERPRISE_REQUIREMENTS.md  FRONTEND_REDESIGN_PROMPT.md  IMPLEMENTATION_SUMMARY.md  PROJECT_COMPLETION_SUMMARY.md  PROJECT_STATUS.txt  PacketPeeper.code-workspace  QUICK_START.md  README.md  TESTING_GUIDE.md  app.py  backend.py  commit_timeline.sh  docker_compose.yml  package-lock.json  packet_sniffer.py  requirements.txt  sniffer_Wi-Fi_log.txt  start_all.bat  start_backend.bat  start_backend.sh  start_frontend.bat  start_frontend.sh  test_detection.py  test_socket.py  verify_backend.py
Packet_Peeper/: .gitignore  README.md  app.py  package-lock.json  package.json  packet_sniffer.py  requirements.txt  sniffer_Wi-Fi_log.txt  test_socket.py
attack_tests/: README.md  advanced_attacks.py  application_attacks.py  dos_attacks.py  port_scanner.py  requirements.txt  run_all_attacks.py  spoofing_attacks.py  test.py
backend/: Dockerfile  app.py  extensions.py  network_security_monitor.py  packet_sniffer.py  requirements.txt  rust_bridge.py  test_detection.py  verify_backend.py
config/: config.py
core_sniffer_rs/: Cargo.toml  pyproject.toml
core_sniffer_rs/src/: lib.rs
docs/: AUTH_FLOW.md  DETECTION_CONFIG.md  README.md  TESTING.md
frontend/: Dockerfile  README.md  components.json  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
services/: database_services.py  packet_processor.py
(+104 files in other folders)
